--- a/PonyRides/PonyRidesWebSite/PonyRidesWebSite.csproj
+++ b/PonyRides/PonyRidesWebSite/PonyRidesWebSite.csproj
@@ -210,19 +210,31 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BookingController.cs" />
+    <Compile Include="Controllers\BrowsePoniesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PoniesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605220936262_Initial.cs" />
+    <Compile Include="Migrations\201605220936262_Initial.Designer.cs">
+      <DependentUpon>201605220936262_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Data\Booking.cs" />
+    <Compile Include="Models\Data\BookingDetails.cs" />
+    <Compile Include="Models\Data\Pony.cs" />
+    <Compile Include="Models\Data\PonyContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -285,10 +297,16 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Booking\View.cshtml" />
     <Content Include="Views\Booking\Index.cshtml" />
-    <Content Include="Views\Ponies\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\EditPonies.cshtml" />
     <Content Include="Views\Admin\ListBookings.cshtml" />
+    <Content Include="Views\Ponies\Index.cshtml" />
+    <Content Include="Views\Ponies\Create.cshtml" />
+    <Content Include="Views\Ponies\Edit.cshtml" />
+    <Content Include="Views\Ponies\Delete.cshtml" />
+    <Content Include="Views\Ponies\Details.cshtml" />
+    <Content Include="Views\BrowsePonies\Index.cshtml" />
+    <Content Include="Views\BrowsePonies\Book.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -300,6 +318,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605220936262_Initial.resx">
+      <DependentUpon>201605220936262_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
