Authentication + Browse ponies

--- a/PonyRides/PonyRidesWebSite/Web.config
+++ b/PonyRides/PonyRidesWebSite/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PonyRidesWebSite-20160510033615.mdf;Initial Catalog=aspnet-PonyRidesWebSite-20160510033615;Integrated Security=True" providerName="System.Data.SqlClient" /> 
-    <add name="MySQLConnection" connectionString="server=ponies.consenlip41s.ap-southeast-1.rds.amazonaws.com;database=ponies;port=3306;user=master;password=1a2sECRV;" providerName="MySql.Data.MySqlClient" />
+    <add name="PonyDBConnection" providerName="MySql.Data.MySqlClient" connectionString="server=ponyrides.c4gvr097x1su.ap-southeast-2.rds.amazonaws.com;UserId=master;Password=1qazxcde32ws;database=ponyrides;CharSet=utf8;Persist Security Info=True"/>
+    <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PonyRidesWebSite-20160510033615.mdf;Initial Catalog=aspnet-PonyRidesWebSite-20160510033615;Integrated Security=True" providerName="System.Data.SqlClient" /> -->
+    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="server=ponyrides.c4gvr097x1su.ap-southeast-2.rds.amazonaws.com;UserId=master;Password=1qazxcde32ws;database=ponyrides;CharSet=utf8;Persist Security Info=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
