--- a/PonyRides/PonyRidesWebSite/PonyRidesWebSite.csproj
+++ b/PonyRides/PonyRidesWebSite/PonyRidesWebSite.csproj
@@ -45,9 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DayPilot, Version=5.0.303.0, Culture=neutral, PublicKeyToken=ce5d34538e20ef65, processorArchitecture=MSIL">
-      <HintPath>..\packages\DayPilot.5.0.303\lib\DayPilot.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="DayPilot.Web.Mvc, Version=1.5.415.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Lib\DayPilot.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
@@ -214,6 +214,7 @@
     <Compile Include="Controllers\BrowsePoniesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MyBookingsController.cs" />
     <Compile Include="Controllers\PoniesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -222,8 +223,21 @@
     <Compile Include="Migrations\201605220936262_Initial.Designer.cs">
       <DependentUpon>201605220936262_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605250746032_AlteredBooking.cs" />
+    <Compile Include="Migrations\201605250746032_AlteredBooking.Designer.cs">
+      <DependentUpon>201605250746032_AlteredBooking.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605250747495_AlteredBooking2.cs" />
+    <Compile Include="Migrations\201605250747495_AlteredBooking2.Designer.cs">
+      <DependentUpon>201605250747495_AlteredBooking2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605250949215_AlteredBooking3.cs" />
+    <Compile Include="Migrations\201605250949215_AlteredBooking3.Designer.cs">
+      <DependentUpon>201605250949215_AlteredBooking3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BookingList.cs" />
     <Compile Include="Models\Data\Booking.cs" />
     <Compile Include="Models\Data\BookingDetails.cs" />
     <Compile Include="Models\Data\Pony.cs" />
@@ -248,10 +262,15 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\datepicker.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Lib\DayPilot.Web.Mvc.dll" />
+    <Content Include="Lib\DayPilot.Web.Mvc.xml" />
     <Content Include="media\ponies\applejack.jpg" />
     <Content Include="media\ponies\doris.jpg" />
     <Content Include="media\ponies\flossy.png" />
@@ -261,16 +280,21 @@
     <Content Include="media\ponies\trixie.png" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\glyphicons-halflings-regular.woff2">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\daypilot-194-lite-all.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -328,14 +352,23 @@
     <Content Include="Views\Ponies\Details.cshtml" />
     <Content Include="Views\BrowsePonies\Index.cshtml" />
     <Content Include="Views\BrowsePonies\Book.cshtml" />
+    <Content Include="Views\BrowsePonies\Booking2.cshtml" />
+    <Content Include="Views\MyBookings\Index.cshtml" />
+    <Content Include="Views\MyBookings\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\glyphicons-halflings-regular.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fonts\glyphicons-halflings-regular.eot">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
@@ -343,6 +376,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201605220936262_Initial.resx">
       <DependentUpon>201605220936262_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605250746032_AlteredBooking.resx">
+      <DependentUpon>201605250746032_AlteredBooking.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605250747495_AlteredBooking2.resx">
+      <DependentUpon>201605250747495_AlteredBooking2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605250949215_AlteredBooking3.resx">
+      <DependentUpon>201605250949215_AlteredBooking3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
