--- a/PonyRides/PonyRidesWebSite/PonyRidesWebSite.csproj
+++ b/PonyRides/PonyRidesWebSite/PonyRidesWebSite.csproj
@@ -45,10 +45,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DayPilot.Web.Mvc, Version=1.5.415.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\DayPilot.Web.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -210,7 +206,6 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\BrowsePoniesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -269,8 +264,6 @@
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Lib\DayPilot.Web.Mvc.dll" />
-    <Content Include="Lib\DayPilot.Web.Mvc.xml" />
     <Content Include="media\ponies\applejack.jpg" />
     <Content Include="media\ponies\doris.jpg" />
     <Content Include="media\ponies\flossy.png" />
@@ -278,6 +271,7 @@
     <Content Include="media\pony.png" />
     <Content Include="media\ponies\suri.png" />
     <Content Include="media\ponies\trixie.png" />
+    <Content Include="media\SAA_Small.png" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
@@ -340,8 +334,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Booking\View.cshtml" />
-    <Content Include="Views\Booking\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\EditPonies.cshtml" />
     <Content Include="Views\Admin\ListBookings.cshtml" />
@@ -352,9 +344,7 @@
     <Content Include="Views\Ponies\Details.cshtml" />
     <Content Include="Views\BrowsePonies\Index.cshtml" />
     <Content Include="Views\BrowsePonies\Book.cshtml" />
-    <Content Include="Views\BrowsePonies\Booking2.cshtml" />
     <Content Include="Views\MyBookings\Index.cshtml" />
-    <Content Include="Views\MyBookings\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include=".ebextensions\" />
